# PSPDFKit

./: .gitignore  Dockerfile-Production  README.md  gunicorn.conf.py  hiring_manager_msg.md  pyproject.toml  run_tests.sh  startProduction.sh  startWebServerLocally.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-install.sh
.github/workflows/: SAST_lint.yaml  SAST_lint_.yaml  build_and_push_image.yaml  deploy_to_live.yaml  sanity_checks.yaml
flask_backend/: __init__.py  app.py
k8s/: deployment.yaml  ingressroute.yaml  services.yaml
k8s/kustomization/base/: deployment.yaml
k8s/kustomization/branches/staging/: kustomization.yaml
k8s/kustomization/overlays/beta/: kustomization.yaml
k8s/kustomization/overlays/main/: kustomization.yaml
tests/: conftest.py  test_main.py
