[tool.poetry]
name = "flask-backend"
version = "0.1.0"
description = ""
authors = ["Jun-te Kim <junte.kim@mealcraft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
gunicorn = "^23.0.0"
psycogreen = "^1.0.2"
psycopg2-binary = "^2.9.9"
gevent = "^24.2.1"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
